--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-html-reporter",
+  "name": "jest-html-reporter-hyperlink",
   "version": "3.9.0",
   "description": "Jest test results processor for generating a summary in HTML",
   "main": "dist/index.js",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Hargne/jest-html-reporter.git"
+    "url": "git+https://github.com/sahil-khanna/jest-html-reporter.git"
   },
   "keywords": [
     "jest",
@@ -32,7 +32,7 @@
   "bugs": {
     "url": "https://github.com/Hargne/jest-html-reporter/issues"
   },
-  "homepage": "https://github.com/Hargne/jest-html-reporter#readme",
+  "homepage": "https://github.com/sahil-khanna/jest-html-reporter#readme",
   "engines": {
     "node": ">=4.8.3"
   },
